[gd_scene load_steps=7 format=3 uid="uid://cbrertaepk7xh"]

[ext_resource type="FontFile" uid="uid://cdhbxgr4qsly4" path="res://assets/ui/InknutAntiqua-SemiBold.ttf" id="1_tfl74"]
[ext_resource type="Texture2D" uid="uid://7g5ew7r4d5h7" path="res://assets/ui/button.png" id="2_mbbmh"]
[ext_resource type="Script" path="res://ui/save_button.gd" id="3_5sv4a"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rw0rx"]
texture = ExtResource("2_mbbmh")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_75nht"]
texture = ExtResource("2_mbbmh")
modulate_color = Color(0.901961, 0.901961, 0.901961, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1qtvk"]
texture = ExtResource("2_mbbmh")
modulate_color = Color(0.8, 0.8, 0.8, 1)

[node name="SaveButton" type="Button"]
custom_minimum_size = Vector2(932, 216)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_tfl74")
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxTexture_rw0rx")
theme_override_styles/hover = SubResource("StyleBoxTexture_75nht")
theme_override_styles/pressed = SubResource("StyleBoxTexture_1qtvk")
text = "Level Name
Total Time Played: 1h 23m 45s"
script = ExtResource("3_5sv4a")

[node name="DeleteButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -61.2565
offset_top = -10.6284
offset_right = -21.2565
offset_bottom = 101.372
grow_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_tfl74")
theme_override_font_sizes/font_size = 36
text = "X"
flat = true

[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="pressed" from="DeleteButton" to="." method="_on_delete_button_pressed"]
